# trips

./: Cargo.toml  build.rs
examples/: simple.rs
res/: Box.gltf  monkey.gltf
src/: buffers.rs  geometry.rs  lib.rs  mesh.rs  object.rs  pipelines.rs  scene.rs  shaders.rs  wgpu_state.rs
src/materials/: mod.rs  solid_color_material.rs
src/shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
