[package]
name = "trips"
version = "0.1.0"
authors = ["ekirshey <ekirshey@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.24.0"
futures = "0.3"
wgpu= "0.8"
gltf= { version = "0.16", features = [ "utils" ] }
glam= { version = "0.15", features = [ "bytemuck" ] }
bytemuck = { version = "1.5", features = [ "derive" ] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"